Compiler/myCompilerParser.java
// $ANTLR 3.5.2 myCompiler.g 2018-06-23 17:55:13

    // import packages here.
    import java.util.HashMap;
    import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myCompilerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARRAY", "BREAK_", "CHAR", "CHAR_TYPE", 
		"COLON", "COMMA", "COMMENT1", "COMMENT2", "CONTINUE_", "DEC_NUM", "DEFINE", 
		"DIGIT", "DOUBLE_TYPE", "ELSE_", "EscapeSequence", "FLOAT_NUM", "FLOAT_NUM1", 
		"FLOAT_NUM2", "FLOAT_NUM3", "FLOAT_TYPE", "FOR_", "FUNCTION_CALL", "ID", 
		"IF_", "INCLUDE", "INT_TYPE", "LBRACE", "LBRACK", "LETTER", "LONGLONG_TYPE", 
		"LONG_TYPE", "LPAREN", "OP_ADD", "OP_ADDADD", "OP_ADDAS", "OP_AND", "OP_ASS", 
		"OP_DIV", "OP_DIVAS", "OP_EQ", "OP_GE", "OP_GT", "OP_LAND", "OP_LE", "OP_LOR", 
		"OP_LS", "OP_LSAS", "OP_LT", "OP_MODAS", "OP_MUL", "OP_MULAS", "OP_NE", 
		"OP_NOT", "OP_OR", "OP_RS", "OP_RSAS", "OP_SUB", "OP_SUBAS", "OP_SUBSUB", 
		"OP_XOR", "OP_XORAS", "PERIOD", "PREPROCESSOR", "RBRACE", "RBRACK", "RETURN_", 
		"RPAREN", "SEMICOL", "SHORT_TYPE", "STRING", "VOID_TYPE", "WHILE_", "WS", 
		"'printf'"
	};
	public static final int EOF=-1;
	public static final int T__77=77;
	public static final int ARRAY=4;
	public static final int BREAK_=5;
	public static final int CHAR=6;
	public static final int CHAR_TYPE=7;
	public static final int COLON=8;
	public static final int COMMA=9;
	public static final int COMMENT1=10;
	public static final int COMMENT2=11;
	public static final int CONTINUE_=12;
	public static final int DEC_NUM=13;
	public static final int DEFINE=14;
	public static final int DIGIT=15;
	public static final int DOUBLE_TYPE=16;
	public static final int ELSE_=17;
	public static final int EscapeSequence=18;
	public static final int FLOAT_NUM=19;
	public static final int FLOAT_NUM1=20;
	public static final int FLOAT_NUM2=21;
	public static final int FLOAT_NUM3=22;
	public static final int FLOAT_TYPE=23;
	public static final int FOR_=24;
	public static final int FUNCTION_CALL=25;
	public static final int ID=26;
	public static final int IF_=27;
	public static final int INCLUDE=28;
	public static final int INT_TYPE=29;
	public static final int LBRACE=30;
	public static final int LBRACK=31;
	public static final int LETTER=32;
	public static final int LONGLONG_TYPE=33;
	public static final int LONG_TYPE=34;
	public static final int LPAREN=35;
	public static final int OP_ADD=36;
	public static final int OP_ADDADD=37;
	public static final int OP_ADDAS=38;
	public static final int OP_AND=39;
	public static final int OP_ASS=40;
	public static final int OP_DIV=41;
	public static final int OP_DIVAS=42;
	public static final int OP_EQ=43;
	public static final int OP_GE=44;
	public static final int OP_GT=45;
	public static final int OP_LAND=46;
	public static final int OP_LE=47;
	public static final int OP_LOR=48;
	public static final int OP_LS=49;
	public static final int OP_LSAS=50;
	public static final int OP_LT=51;
	public static final int OP_MODAS=52;
	public static final int OP_MUL=53;
	public static final int OP_MULAS=54;
	public static final int OP_NE=55;
	public static final int OP_NOT=56;
	public static final int OP_OR=57;
	public static final int OP_RS=58;
	public static final int OP_RSAS=59;
	public static final int OP_SUB=60;
	public static final int OP_SUBAS=61;
	public static final int OP_SUBSUB=62;
	public static final int OP_XOR=63;
	public static final int OP_XORAS=64;
	public static final int PERIOD=65;
	public static final int PREPROCESSOR=66;
	public static final int RBRACE=67;
	public static final int RBRACK=68;
	public static final int RETURN_=69;
	public static final int RPAREN=70;
	public static final int SEMICOL=71;
	public static final int SHORT_TYPE=72;
	public static final int STRING=73;
	public static final int VOID_TYPE=74;
	public static final int WHILE_=75;
	public static final int WS=76;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCompilerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCompilerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myCompilerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myCompiler.g"; }


	    boolean TRACEON = false;
	    HashMap<String,Integer> symbolTable = new HashMap<String,Integer>();
	    HashMap<Integer,String> reg_map = new HashMap<Integer,String>();

	    /*
	    public enum typeInfo{
	        Short,
	        Integer, 
	        Long,
	        Float,
	        Double, 
	        Long Long, 
	        Char, 
	        Void, 
	        Unknown,
	        No_exist,
	        Error
	    }
	    */

	    int attr_type;

	    /*
	    attr_type:
	        1   =>  short
	        2   =>  integer, 
	        3   =>  long, 
	        4   =>  float,
	        5   =>  double
	        6   =>  long long
	        7   =>  char,
	        8   =>  void,
	        -1  =>  do not exist,
	        -2  =>  error
	     */

	    int labelCount = 0;

	    List<String> DataCode = new ArrayList<String>();
	    List<String> TextCode = new ArrayList<String>();
	 
	    public static register reg = new register(0, 9);
	    
	    /*
	     * Output prologue.
	     */
	    void prologue(String id)
	    {
	       TextCode.add("\n\n/* Text section */");
	       TextCode.add("\t.section .text");
	       TextCode.add("\t.global " + id);
	       TextCode.add("\t.type " + id + ",@function");
	       TextCode.add(id + ":");
	       
	       /* Follow x86 calling convention */
	       TextCode.add("\t pushq %rbp");
	       TextCode.add("\t movq %rsp,%rbp");
	       TextCode.add("\t pushq %rbx"); //callee saved registers.
	       TextCode.add("\t pushq %r12"); //callee saved registers.
	       TextCode.add("\t pushq %r13"); //callee saved registers.
	       TextCode.add("\t pushq %r14"); //callee saved registers.
	       TextCode.add("\t pushq %r15"); //callee saved registers.
	       TextCode.add("\t subq $8,%rsp\n"); // aligned 16-byte boundary.
	    }
	    
	    /*
	     * Output epilogue.
	     */
	    void epilogue()
	    {
	       /* handle epilogue */
	       
	       /* Follow x86 calling convention */
	       TextCode.add("\n\t addq $8,%rsp");
	       TextCode.add("\t popq %r15");
	       TextCode.add("\t popq %r14");
	       TextCode.add("\t popq %r13");
	       TextCode.add("\t popq %r12");
	       TextCode.add("\t popq %rbx");
	       TextCode.add("\t popq %rbp");
	       TextCode.add("\t ret");
	    }
	    
	    
	    /* Generate a new label */
	    String newLabel()
	    {
	       labelCount ++;
	       return (new String("L")) + Integer.toString(labelCount);
	    } 
	    
	    
	    public List<String> getDataCode()
	    {
	       return DataCode;
	    }
	    
	    public List<String> getTextCode()
	    {
	       return TextCode;
	    }



	// $ANTLR start "startstat"
	// myCompiler.g:118:1: startstat : declarations functions ;
	public final void startstat() throws RecognitionException {
		try {
			// myCompiler.g:119:5: ( declarations functions )
			// myCompiler.g:120:5: declarations functions
			{

			        reg_map.put(0,"r14d");
			        reg_map.put(1,"ebx");
			        reg_map.put(2,"ecx");
			        reg_map.put(3,"r15d");
			        reg_map.put(4,"r8d");
			        reg_map.put(5,"r9d");
			        reg_map.put(6,"r10d");
			        reg_map.put(7,"r11d");
			        reg_map.put(8,"r12d");
			        reg_map.put(9,"r13d");
			    
			pushFollow(FOLLOW_declarations_in_startstat55);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_functions_in_startstat57);
			functions();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "startstat"



	// $ANTLR start "functions"
	// myCompiler.g:136:1: functions : ( function functions |);
	public final void functions() throws RecognitionException {
		try {
			// myCompiler.g:137:5: ( function functions |)
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==CHAR_TYPE||LA1_0==DOUBLE_TYPE||LA1_0==FLOAT_TYPE||LA1_0==INT_TYPE||(LA1_0 >= LONGLONG_TYPE && LA1_0 <= LONG_TYPE)||LA1_0==SHORT_TYPE||LA1_0==VOID_TYPE) ) {
				alt1=1;
			}
			else if ( (LA1_0==EOF) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// myCompiler.g:137:7: function functions
					{
					pushFollow(FOLLOW_function_in_functions75);
					function();
					state._fsp--;

					pushFollow(FOLLOW_functions_in_functions77);
					functions();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:139:5: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functions"



	// $ANTLR start "function"
	// myCompiler.g:141:1: function : type ID '(' RPAREN LBRACE l_declarations statements RBRACE ;
	public final void function() throws RecognitionException {
		Token ID1=null;

		try {
			// myCompiler.g:142:5: ( type ID '(' RPAREN LBRACE l_declarations statements RBRACE )
			// myCompiler.g:142:9: type ID '(' RPAREN LBRACE l_declarations statements RBRACE
			{
			pushFollow(FOLLOW_type_in_function108);
			type();
			state._fsp--;

			ID1=(Token)match(input,ID,FOLLOW_ID_in_function110); 
			match(input,LPAREN,FOLLOW_LPAREN_in_function112); 
			match(input,RPAREN,FOLLOW_RPAREN_in_function114); 
			match(input,LBRACE,FOLLOW_LBRACE_in_function124); 

			                /* output function prologue */
			                prologue((ID1!=null?ID1.getText():null));
			            
			pushFollow(FOLLOW_l_declarations_in_function152);
			l_declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_function154);
			statements();
			state._fsp--;

			match(input,RBRACE,FOLLOW_RBRACE_in_function165); 

			                /* output function epilogue */	  
			                epilogue();
			            
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "function"



	// $ANTLR start "declarations"
	// myCompiler.g:159:1: declarations : ( type ID SEMICOL declarations |);
	public final void declarations() throws RecognitionException {
		Token ID3=null;
		int type2 =0;

		try {
			// myCompiler.g:160:5: ( type ID SEMICOL declarations |)
			int alt2=2;
			switch ( input.LA(1) ) {
			case SHORT_TYPE:
				{
				int LA2_1 = input.LA(2);
				if ( (LA2_1==ID) ) {
					int LA2_10 = input.LA(3);
					if ( (LA2_10==SEMICOL) ) {
						alt2=1;
					}
					else if ( (LA2_10==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case INT_TYPE:
				{
				int LA2_2 = input.LA(2);
				if ( (LA2_2==ID) ) {
					int LA2_10 = input.LA(3);
					if ( (LA2_10==SEMICOL) ) {
						alt2=1;
					}
					else if ( (LA2_10==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case LONG_TYPE:
				{
				int LA2_3 = input.LA(2);
				if ( (LA2_3==ID) ) {
					int LA2_10 = input.LA(3);
					if ( (LA2_10==SEMICOL) ) {
						alt2=1;
					}
					else if ( (LA2_10==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT_TYPE:
				{
				int LA2_4 = input.LA(2);
				if ( (LA2_4==ID) ) {
					int LA2_10 = input.LA(3);
					if ( (LA2_10==SEMICOL) ) {
						alt2=1;
					}
					else if ( (LA2_10==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DOUBLE_TYPE:
				{
				int LA2_5 = input.LA(2);
				if ( (LA2_5==ID) ) {
					int LA2_10 = input.LA(3);
					if ( (LA2_10==SEMICOL) ) {
						alt2=1;
					}
					else if ( (LA2_10==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 5, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case LONGLONG_TYPE:
				{
				int LA2_6 = input.LA(2);
				if ( (LA2_6==ID) ) {
					int LA2_10 = input.LA(3);
					if ( (LA2_10==SEMICOL) ) {
						alt2=1;
					}
					else if ( (LA2_10==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 6, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR_TYPE:
				{
				int LA2_7 = input.LA(2);
				if ( (LA2_7==ID) ) {
					int LA2_10 = input.LA(3);
					if ( (LA2_10==SEMICOL) ) {
						alt2=1;
					}
					else if ( (LA2_10==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 7, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case VOID_TYPE:
				{
				int LA2_8 = input.LA(2);
				if ( (LA2_8==ID) ) {
					int LA2_10 = input.LA(3);
					if ( (LA2_10==SEMICOL) ) {
						alt2=1;
					}
					else if ( (LA2_10==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 8, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
